<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserInterface</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="submit">Submit</string>
    <string name="details_screen">Details screen</string>
    <string name="ivan_mail_com">ivan@mail.com</string>
    <string name="ivan_petrov">Ivan Petrov</string>

</resources>
