<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginRight="@dimen/margin_medium"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/edittext_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageview_profile"
        android:layout_toRightOf="@+id/imageview_profile"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_first_name"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_toRightOf="@+id/imageview_profile"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_profile"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
        
        <EditText android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/password"/>
        
         <EditText android:id="@+id/edittext_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/password_again"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_margin="@dimen/margin_medium"/>

</RelativeLayout>